# AIOps

./: .dockerignore  .env.example  .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  ARCHITECTURE.md  Dockerfile  ENHANCED_FEATURES.md  FEATURES_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  LICENSE  Makefile  NEW_FEATURES.md  OPTIMIZATION_SUMMARY.md  QUICKSTART.md  README.md  REFACTOR_PROGRESS.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  setup.py  test_new_features.py
.github/workflows/: ai-code-review.yml  ai-test-generation.yml  ci-pipeline-optimization.yml  quality-check.yml  security-scan.yml
aiops/: __init__.py
aiops/agents/: __init__.py  anomaly_detector.py  api_performance_analyzer.py  auto_fixer.py  base_agent.py  chaos_engineer.py  cicd_optimizer.py  code_quality.py  code_reviewer.py  compliance_checker.py  config_drift_detector.py  container_security.py  cost_optimizer.py  db_query_analyzer.py  dependency_analyzer.py  disaster_recovery.py  doc_generator.py  iac_validator.py  incident_response.py  intelligent_monitor.py  k8s_optimizer.py  log_analyzer.py  migration_planner.py  performance_analyzer.py  release_manager.py  secret_scanner.py  security_scanner.py  service_mesh_analyzer.py  sla_monitor.py  test_generator.py
aiops/api/: __init__.py  app.py  auth.py  main.py  middleware.py
aiops/cache/: __init__.py  (+1 more)
benchmarks/: README.md  __init__.py  benchmark_suite.py  load_test.py
docs/: BEST_PRACTICES.md  DEPLOYMENT.md  TESTING_BASELINE.md  TESTING_ROADMAP.md  TROUBLESHOOTING.md
scripts/: README.md  health_check.py  setup_check.py  validate_system.py
(+89 files in other folders)
